manifests/magento-deployment.yaml
#magento-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento
  template:
    metadata:
      labels:
        app: magento
    spec:
      containers:
      - name: magento
        image: gameel101/dockerized-magento:latest
        ports:
        - containerPort: 9000    
---
apiVersion: v1
kind: Service
metadata:
  name: magento
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: magento
