manifests/varnish-deployment.yaml
#varnish-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: varnish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: varnish
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
      - name: varnish
        image: varnish:latest
        ports:
        - containerPort: 6081
---
apiVersion: v1
kind: Service
metadata:
  name: varnish
spec:
  ports:
  - port: 6081
    targetPort: 6081
  selector:
    app: varnish
