manifests/magento-ingress.yaml
#magento-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magento-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - mymagento.local
    secretName: magento-tls
  rules:
  - host: mymagento.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: magento
            port:
              number: 9000
